[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "Requirements for Epum Fast-API appication"
authors = ["Maria Hidalgo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
ruff = "^0.6.6"
setuptools = "^75.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
